--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 atoi = "1.0.0"
 bytes = "1.1.0"
 num = "0.4.0"
+thiserror = "1.0.30"
 tokio = { version = "1.15.0", features = ["full"] }
 
 [dev-dependencies]
