--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ tokio = { version = "1.15.0", features = ["full"] }
 
 [dev-dependencies]
 anyhow = "1.0.53"
+serial_test = "0.6.0"
 time = { version = "0.3.7", features = ["macros"] }
